[gd_scene load_steps=5 format=3 uid="uid://bsshhtnxfy1ln"]

[ext_resource type="Script" uid="uid://cqng025uag1t7" path="res://scenes/game-mechanics/health_player.gd" id="1_hmsuu"]
[ext_resource type="PackedScene" uid="uid://cb88ujjnogrjm" path="res://scenes/ui-elements/hud/healthbar_hud.tscn" id="2_8b1u6"]
[ext_resource type="PackedScene" uid="uid://bpi6en614y70v" path="res://scenes/ui-elements/misc/health_bar.tscn" id="3_j1wy3"]

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_hmsuu"]
properties/0/path = NodePath(".:health")
properties/0/spawn = true
properties/0/replication_mode = 1

[node name="HealthPlayer" type="Node2D"]
script = ExtResource("1_hmsuu")

[node name="HealthBar" parent="." instance=ExtResource("3_j1wy3")]
offset_top = -21.0
offset_bottom = -18.0

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="HealthBarHUD" parent="CanvasLayer" instance=ExtResource("2_8b1u6")]
visible = false

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_hmsuu")
